--- a/StatueOfTheQueen/About/Changelog.txt
+++ b/StatueOfTheQueen/About/Changelog.txt
@@ -1,3 +1,8 @@
+Version 1.0.3 (October 6th 2022)
+
+* Mod is now compatible with the RimWorld 1.4 patch.
+* Increased statue beauty to 1000 (was 750).
+
 Version 1.0.1 (September 11th 2021)
 
 * Initial Release.
